# template-rs-axum

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.config/: default.config.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  implementation.md  tracking.md
.github/workflows/: clippy.yml  docker.yml  release.yml  rust.yml
migrations/: 20240705174310_items.sql
scripts/: add.sh  items.sh
src/: lib.rs  primitives.rs  utils.rs
src/api/: mod.rs
src/api/routes/: base.rs  items.rs  mod.rs
src/api/services/: mod.rs  oauth.rs
src/config/: context.rs  mod.rs  settings.rs
src/config/settings/: database.rs  logger.rs  mode.rs  server.rs
src/models/: items.rs
src/platform/: application.rs  error.rs  init.rs  mod.rs  state.rs
src/platform/server/: builder.rs  mod.rs  server.rs
src/types/: crud.rs  mod.rs  status.rs
